feat: MediaStorage is a dependency a Project may substitute (#254)
